# go2_webrtc_connect

./: README.md  pyproject.toml  requirements_audio.txt  requirements_pcd.txt  troubleshooting.md
apps/: README.md
apps/gamepad/: gamepad_config.py  gamepad_controller.py  gamepad_mapping.yaml  gamepad_visualizer.py
apps/gesture/: README.md  hand_gestures.py
apps/rerun/: README.md  rerun_video_lidar_stream.py
apps/webxr/: README.md  record_lidar_video.py  requirements.txt  server.py
apps/webxr/static/: index.html  main.js
examples/: README.md  README_video_lidar_rerun.md  rerun_video_lidar_stream.py
examples/audio/internet_radio/: stream_radio.py
examples/audio/live_audio/: live_recv_audio.py
examples/audio/mp3_player/: play_mp3.py  webrtc_audio_player.py
examples/audio/save_audio/: save_audio_to_file.py
examples/data_channel/: CONVERSION_SUMMARY.md  README_handstand.md  README_robot_helper.md  README_trajectory_follow.md  example_heartbeat.py  example_heartbeat_advanced.py  frontflip.py  handstand_example.py  handstand_example_debug.py  handstand_example_fixed.py  heart_gesture_test.py  move_test.py  quick_heartbeat_test.py  show_gestures.py  simple_handstand_example.py  simple_heart_gesture_example.py  simple_stand_example.py  sit_down.py  sport_commands_example.py  stand_down.py  stand_up.py  trajectory_follow_advanced.py  trajectory_follow_simple.py
examples/data_channel/lidar/: README_pcd_recording.md  lidar_performance_test.py  lidar_stream.py  plot_lidar_stream.py  record_lidar_pcd.py  rerun_lidar_stream.py  view_pcd.py
examples/data_channel/lowstate/: lowstate.py
examples/data_channel/multiplestate/: multiplestate.py
examples/data_channel/robot_odometry/: README.md  analyze_timestamp_drift.py  robot_odometry.py  simple_robot_odometry.py  timestamp_drift.py
examples/data_channel/sportmode/: sportmode.py  test_acrobatic_commands.py
examples/data_channel/sportmodestate/: compare_timestamps.py  sportmodestate.py
examples/data_channel/vui/: vui.py
examples/video/camera_stream/: display_video_channel.py
go2_webrtc_driver/: __init__.py  cli_go2action.py  constants.py  debug_webrtc.py  encryption.py  multicast_scanner.py  robot_helper.py  unitree_auth.py  util.py  webrtc_audio.py  webrtc_audiohub.py  webrtc_datachannel.py  webrtc_driver.py  webrtc_video.py
go2_webrtc_driver/lidar/: lidar_decoder_libvoxel.py  lidar_decoder_native.py  lidar_decoder_unified.py  point_cloud_accumulator.py
go2_webrtc_driver/msgs/: error_handler.py  future_resolver.py  heartbeat.py  pub_sub.py  rtc_inner_req.py  validation.py
